# zeronDesign

./: .dockerignore  .gitignore  2026-07-04-agent-harness-design.md  2026-07-04-internal-ai-website-docs-generator-architecture.md  2026-07-04-internal-ai-website-docs-generator-requirements.md  2026-07-04-mvp-implementation-plan.md  2026-07-04-rust-agent-harness-delivery-review.md  2026-07-04-rust-runtime-spec.md  2026-07-07-package-install-shell-execution-plan.md  2026-07-07-runtime-harness-fix-plan.md  2026-07-07-tool-call-json-write-protocol-fix-plan.md  2026-07-08-phase-a-acceptance-report.md  2026-07-08-project-lifecycle-generation-edit-build-plan.md  2026-07-08-runtime-api-freeze.md  2026-07-09-design-profile-spec.md  2026-07-09-live-sse-implementation-guide.md  2026-07-09-run-events-live-sse-plan.md  2026-07-09-runtime-harness-edit-loop-fix-plan.md  2026-07-10-design-profile-fidelity-remediation-plan.md  2026-07-10-kubernetes-runtime-remote-workspace-remediation-plan.md  2026-07-11-harness-runtime-product-optimization-spec.md  2026-07-11-kubernetes-runtime-rc-closure-implementation-plan.md  2026-07-11-kubernetes-runtime-rc-gap-analysis.md  2026-07-11-sandbox-tools-architecture-split-plan.md  2026-07-12-design-profile-lifecycle-closure-spec.md  2026-07-12-generic-template-artifact-sandbox-ingress-plan.md  2026-07-12-runtime-architecture-master-execution-plan.md  2026-07-12-runtime-http-api-architecture-split-plan.md  2026-07-13-attachment-docs-test-cases.md  2026-07-13-runtime-api-freeze-phase-b-implementation-report.md  2026-07-13-v0-lovable-expected-user-stories.md  2026-07-13-v0-lovable-productization-implementation-plan.md  2026-07-14-website-design-context-package-implementation-plan.md  2026-07-16-generation-reliability-remediation-plan.md  2026-07-16-provider-gateway-implementation-plan.md  2026-07-17-real-provider-five-case-report.md  2026-07-18-ai-website-docs-generator-p0-user-stories.md  2026-07-18-design-profile-productization-implementation-plan.md  2026-07-18-namespace-workspace-greenfield-implementation-plan.md  2026-07-18-real-model-api-p0-test-cases.md  (+7 more)
services/provider-gateway/: Cargo.toml  Dockerfile  README.md
services/provider-gateway/contracts/: error.schema.json  model-resource.schema.json  model-selection-policy.schema.json  model-service.schema.json  provider-connection.schema.json  turn-request.schema.json  turn-response.schema.json
services/provider-gateway/migrations/: 0001_postgres_shared_state.sql  0002_provider_connections.sql
services/provider-gateway/src/: lib.rs  main.rs  postgres_store.rs  storage.rs
services/runtime/: Cargo.toml  Dockerfile
services/runtime/contracts/: artifact-manifest-v1.schema.json  http-routes.json  publication-outbox-v1.schema.json  publish-operation-v1.schema.json  (+6 more)
(+689 files in other folders)
