[package]
name = "anydesign-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["io-util", "macros", "rt-multi-thread", "net", "process", "time"] }
tokio-tungstenite = "0.29.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
