[package]
name = "anydesign-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
rand = "0.9"
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["io-util", "macros", "rt-multi-thread", "net", "process", "signal", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
x509-parser = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }
